# gccrs-unicode

./: CMakeLists.txt  README.md
src/: lexer.h  main.cc  token.h  ustring.cc  ustring.h
src/unicode/: table.h  unicode.cc  unicode.h
